r100 (29. 11. 2022):
Added Czech translation
Fixed an issue where Assault Delay tracker is not visible if enabled on certain heists
Fixed an issue where Tag Team Effect (Tagged) buffs are marked as "bad"

r99 (14. 11. 2022):
Stamina Buff: Fixed a crash at spawn

r98 (13. 11. 2022):
Added Stamina buff
Fixed an issue where trackers are preloaded for Sentry Gun equipment
Fixed an issue where trackers for SWAT Van Turret are not preloaded properly on client

r97 (11. 11. 2022):
Improved performance by preloading trackers for SWAT Van Turret and Zipline units
Zipline: Fixed an issue where total time is inaccurate after a bag is "eaten" by ElementAreaTrigger

r96 (06. 11. 2022):
Boiling Point: Fixed info not appearing
Firestarter Day 2: Fixed server loot objective not counting in Loot Counter
Waypoints: Fixed a crash at load if custom icon is defined and unit is active (drop-in)

r95 (05. 11. 2022):
Election Day 2: Fixed an issue with maximum amount in Loot Counter
Firestarter Day 1: Fixed an issue where Loot Counter and achievements do not show correct progress
Fixed an issue where achievement tracker for "The Reckoning" does not count kills from secondary weapon (if attached with Reconnaissance sight)
Waypoints: Optimized performance

r94 (31. 10. 2022):
Lost in Transit: Updated to U230.1

r93 (30. 10. 2022):
Fixed a crash when you run over a civilian

r92 (28. 10. 2022):
Fixed a crash when bot does not have loadout

r91 (27. 10. 2022):
Menu: Fixed broken buff textures
Santa's Workshop: Added achievement tracker for "Only Santa Brings Gifts"

r90 (25. 10. 2022):
Added trackers for Lost in Transit Heist

r89 (19. 10. 2022):
Updated code to U229
Bloodthirst Ace: Fixed an issue where "reload" buff is not visible

r88 (10. 10. 2022):
Fixed a very rare crash during mission load
Murky Station: Added tracker for achievements "The Pacifist" and "Looting in the Dark"

r87 (08. 10. 2022):
Added proper support for Beardlib achievements
Added throwable regen AI buff